fixed android overflow

--- a/public/styles/module/_content-recommendations.scss
+++ b/public/styles/module/_content-recommendations.scss
@@ -43,6 +43,7 @@
 			color: white;
 			position: absolute;
 			bottom: 0;
+			left: 0;
 		}
 	}
 }
